--- a/about/subject.html
+++ b/about/subject.html
@@ -102,7 +102,7 @@
                                                 <li><a href="/">Result</a></li>
                                                 <li><a href="../results/re-verification.html">Re-Verification</a></li>
                                                 <li><a href="../results/re-evaluation.html">Re-Evaluation</a></li>
-                                                <li><a href="/">NBSE Topper Answer Sheet</a></li>
+                                                <li><a href="../exam-shedule/nbse-topper.html">NBSE Topper Answer Sheet</a></li>
                                             </ul>
                                         </li> 
                                         <li>
