--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                             <li><a href="http://18.189.141.222:8080/nbse-result/">Result</a></li>
                                             <li><a href="results/re-verification.html">Re-Verification</a></li>
                                             <li><a href="results/re-evaluation.html">Re-Evaluation</a></li>
-                                            <li><a href="/">NBSE Topper Answer Sheet</a></li>
+                                            <li><a href="exam-shedule/nbse-topper.html">NBSE Topper Answer Sheet</a></li>
                                         </ul>
                                     </li> 
                                     <li>
@@ -242,7 +242,7 @@
                                 </div>
                                 <div class="icon-post">
                                     <div class="box-title">
-                                        <a href="#">Topper's Answer Sheet (Student can download the marksheet after result declaration)</a>
+                                        <a href="exam-shedule/nbse-topper.html" target="_blank">Topper's Answer Sheet (Student can download the marksheet after result declaration)</a>
                                     </div>
                                    <!--  <div class="box-content">
                                         <p>You can use this theme for university, training center, non-profit organization. There is no limits to University.</p>
