--- a/results/re-evaluation.html
+++ b/results/re-evaluation.html
@@ -103,7 +103,7 @@
                                                 <li><a href="/">Result</a></li>
                                                 <li><a href="re-verification.html">Re-Verification</a></li>
                                                 <li><a href="re-evaluation.html">Re-Evaluation</a></li>
-                                                <li><a href="/">NBSE Topper Answer Sheet</a></li>
+                                                <li><a href="../exam-shedule/nbse-topper.html">NBSE Topper Answer Sheet</a></li>
                                             </ul>
                                         </li> 
                                         <li>
